// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual regression harness > explorer page visual baseline 1`] = `
<section
  class="explorer-page"
>
  <header
    class="explorer-page__header glass-card motion-stagger"
  >
    <div
      class="explorer-page__headline"
    >
      <p
        class="explorer-page__eyebrow"
      >
        Authority Coverage • Headline = Computed
      </p>
      <h1
        class="text-display"
      >
        Festival Explorer
      </h1>
      <p>
        Discover festivals with truth-first quality bands and computed-first headline metrics.
      </p>
    </div>
    <div
      aria-label="Coverage scoreboard"
      class="explorer-page__scoreboard"
    >
      <article
        class="score-card score-card--computed interactive-surface"
      >
        <p
          class="score-card__label"
        >
          Computed
        </p>
        <p
          class="score-card__value"
        >
          323
        </p>
        <p
          class="score-card__meta"
        >
          71.30%
        </p>
      </article>
      <article
        class="score-card score-card--provisional interactive-surface"
      >
        <p
          class="score-card__label"
        >
          Provisional
        </p>
        <p
          class="score-card__value"
        >
          111
        </p>
        <p
          class="score-card__meta"
        >
          24.50%
        </p>
      </article>
      <article
        class="score-card score-card--inventory interactive-surface"
      >
        <p
          class="score-card__label"
        >
          Inventory
        </p>
        <p
          class="score-card__value"
        >
          19
        </p>
        <p
          class="score-card__meta"
        >
          4.20%
        </p>
      </article>
      <article
        class="score-card score-card--claim interactive-surface"
      >
        <p
          class="score-card__label"
        >
          Claim Guard
        </p>
        <p
          class="score-card__value score-card__value--small"
        >
          Ready
        </p>
        <p
          class="score-card__meta"
        >
          Headline: computed
        </p>
      </article>
    </div>
  </header>
  <section
    class="explorer-page__filters glass-card motion-stagger"
  >
    <label
      class="filter-field filter-field--search"
    >
      <span>
        Search
      </span>
      <input
        placeholder="Dashain, Tihar, Shivaratri..."
        type="search"
        value=""
      />
    </label>
    <label
      class="filter-field"
    >
      <span>
        Category
      </span>
      <select>
        <option
          value=""
        >
          All Categories
        </option>
        <option
          value="national"
        >
          National
        </option>
        <option
          value="newari"
        >
          Newari
        </option>
        <option
          value="buddhist"
        >
          Buddhist
        </option>
        <option
          value="hindu"
        >
          Hindu
        </option>
        <option
          value="regional"
        >
          Regional
        </option>
      </select>
    </label>
    <label
      class="filter-field"
    >
      <span>
        Quality Band
      </span>
      <select>
        <option
          value="computed"
        >
          Computed
        </option>
        <option
          value="provisional"
        >
          Provisional
        </option>
        <option
          value="inventory"
        >
          Inventory
        </option>
        <option
          value="all"
        >
          All Bands
        </option>
      </select>
    </label>
    <label
      class="filter-field"
    >
      <span>
        Sort
      </span>
      <select>
        <option
          value="significance"
        >
          Significance
        </option>
        <option
          value="name"
        >
          Name
        </option>
        <option
          value="duration"
        >
          Duration
        </option>
      </select>
    </label>
    <label
      class="filter-switch"
      for="algorithmic-only"
    >
      <input
        checked=""
        id="algorithmic-only"
        type="checkbox"
      />
      <span>
        Algorithmic only
      </span>
    </label>
    <div
      aria-live="polite"
      class="explorer-page__result-total"
      role="status"
    >
      2 results
    </div>
  </section>
  <div
    class="explorer-grid"
  >
    <article
      class="festival-card glass-card interactive-surface interactive-press motion-stagger "
      role="button"
      tabindex="0"
    >
      <div
        class="festival-card__hero"
      >
        <div
          class="festival-card__image "
          style="background-color: rgb(200, 90, 62);"
        >
          <div
            class="festival-card__gradient"
          />
          <span
            class="festival-card__category badge"
          >
            national
          </span>
          <span
            class="festival-card__countdown countdown-badge"
          >
            <span
              class="countdown-icon"
            >
              ⏱
            </span>
            8 months
          </span>
        </div>
      </div>
      <div
        class="festival-card__content"
      >
        <div
          class="festival-card__names"
        >
          <h3
            class="festival-card__title text-display"
          >
            Dashain
          </h3>
          <span
            class="festival-card__title-nepali text-nepali"
          >
            दशैं
          </span>
        </div>
        <div
          class="festival-card__date"
        >
          <span
            class="date-icon"
          >
            📅
          </span>
          <span>
            Oct 20
          </span>
          <span
            class="festival-card__duration"
          >
            (
            10
             days)
          </span>
        </div>
        <div
          class="festival-card__meta-badges"
        >
          <span
            class="badge badge-rule badge-rule--gold"
          >
            gold
          </span>
          <span
            class="badge badge-rule-status"
          >
            computed
          </span>
        </div>
        <button
          class="festival-card__cta btn btn-secondary interactive-surface interactive-press"
        >
          Learn More
          <span
            class="cta-arrow"
          >
            →
          </span>
        </button>
      </div>
    </article>
    <article
      class="festival-card glass-card interactive-surface interactive-press motion-stagger "
      role="button"
      tabindex="0"
    >
      <div
        class="festival-card__hero"
      >
        <div
          class="festival-card__image "
          style="background-color: rgb(212, 160, 82);"
        >
          <div
            class="festival-card__gradient"
          />
          <span
            class="festival-card__category badge"
          >
            national
          </span>
          <span
            class="festival-card__countdown countdown-badge"
          >
            <span
              class="countdown-icon"
            >
              ⏱
            </span>
            9 months
          </span>
        </div>
      </div>
      <div
        class="festival-card__content"
      >
        <div
          class="festival-card__names"
        >
          <h3
            class="festival-card__title text-display"
          >
            Tihar
          </h3>
          <span
            class="festival-card__title-nepali text-nepali"
          >
            तिहार
          </span>
        </div>
        <div
          class="festival-card__date"
        >
          <span
            class="date-icon"
          >
            📅
          </span>
          <span>
            Nov 7
          </span>
          <span
            class="festival-card__duration"
          >
            (
            5
             days)
          </span>
        </div>
        <div
          class="festival-card__meta-badges"
        >
          <span
            class="badge badge-rule badge-rule--validated"
          >
            validated
          </span>
          <span
            class="badge badge-rule-status"
          >
            computed
          </span>
        </div>
        <button
          class="festival-card__cta btn btn-secondary interactive-surface interactive-press"
        >
          Learn More
          <span
            class="cta-arrow"
          >
            →
          </span>
        </button>
      </div>
    </article>
  </div>
</section>
`;

exports[`visual regression harness > feeds page visual baseline 1`] = `
<section
  class="feeds-page"
>
  <header
    class="glass-card feeds-header"
  >
    <div>
      <h2
        class="text-display"
      >
        iCal Subscriptions
      </h2>
      <p>
        Subscribe from Google Calendar, Apple Calendar, or Outlook with continuously updated festival dates.
      </p>
    </div>
    <div
      class="feeds-controls"
    >
      <label>
        Years
        <select>
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
          <option
            value="4"
          >
            4
          </option>
          <option
            value="5"
          >
            5
          </option>
        </select>
      </label>
      <label>
        Language
        <select>
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ne"
          >
            Nepali
          </option>
        </select>
      </label>
    </div>
  </header>
  <section
    class="feeds-links-grid"
  >
    <article
      class="glass-card feed-card"
    >
      <h3>
        All Festivals
      </h3>
      <p
        class="feed-link"
        title="http://localhost:8000/v3/api/feeds/all.ics?years=2&lang=en"
      >
        http://localhost:8000/v3/api/feeds/all.ics?years=2&lang=en
      </p>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary"
          href="http://localhost:8000/v3/api/feeds/all.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary"
        >
          Copy
        </button>
      </div>
    </article>
    <article
      class="glass-card feed-card"
    >
      <h3>
        National Holidays
      </h3>
      <p
        class="feed-link"
        title="http://localhost:8000/v3/api/feeds/national.ics?years=2&lang=en"
      >
        http://localhost:8000/v3/api/feeds/national.ics?years=2&lang=en
      </p>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary"
          href="http://localhost:8000/v3/api/feeds/national.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary"
        >
          Copy
        </button>
      </div>
    </article>
    <article
      class="glass-card feed-card"
    >
      <h3>
        Newari Festivals
      </h3>
      <p
        class="feed-link"
        title="http://localhost:8000/v3/api/feeds/newari.ics?years=2&lang=en"
      >
        http://localhost:8000/v3/api/feeds/newari.ics?years=2&lang=en
      </p>
      <div
        class="feed-card__actions"
      >
        <a
          class="btn btn-primary"
          href="http://localhost:8000/v3/api/feeds/newari.ics?years=2&lang=en"
          rel="noreferrer"
          target="_blank"
        >
          Open Feed
        </a>
        <button
          class="btn btn-secondary"
        >
          Copy
        </button>
      </div>
    </article>
  </section>
  <section
    class="glass-card custom-feed"
  >
    <div
      class="custom-feed__header"
    >
      <h3>
        Custom Festival Feed
      </h3>
      <p>
        Select specific festivals to generate a focused iCal URL.
      </p>
    </div>
    <label
      class="custom-feed__search"
      for="festival-search"
    >
      <span>
        Search festivals
      </span>
      <input
        id="festival-search"
        placeholder="Dashain, Teej, Shivaratri"
        type="search"
        value=""
      />
    </label>
    <div
      aria-label="Select festivals for custom feed"
      class="festival-picker"
      role="group"
    >
      <label
        class="picker-item"
      >
        <input
          type="checkbox"
        />
        <span>
          Dashain
        </span>
      </label>
      <label
        class="picker-item"
      >
        <input
          type="checkbox"
        />
        <span>
          Tihar
        </span>
      </label>
    </div>
    <div
      class="custom-feed__output"
    >
      <p>
        <strong>
          Selected:
        </strong>
         
        0
      </p>
      <p
        class="feed-link"
      >
        Select at least one festival to generate a custom link.
      </p>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > kundali page visual baseline 1`] = `
<section
  class="kundali-page"
>
  <header
    class="glass-card kundali-page__header motion-stagger"
  >
    <div>
      <h2
        class="text-display"
      >
        Kundali Studio
      </h2>
      <p>
        D1 + D9 charts, graha drishti, yoga-dosha markers, and Vimshottari maha + antar dasha.
      </p>
    </div>
    <form
      class="kundali-page__controls"
    >
      <label>
        <span>
          Birth Datetime
        </span>
        <input
          required=""
          type="datetime-local"
          value="2026-02-18T06:30"
        />
      </label>
      <label>
        <span>
          Lat
        </span>
        <input
          value="27.7172"
        />
      </label>
      <label>
        <span>
          Lon
        </span>
        <input
          value="85.3240"
        />
      </label>
      <label>
        <span>
          Timezone
        </span>
        <input
          value="Asia/Kathmandu"
        />
      </label>
      <button
        class="btn btn-primary btn-premium interactive-surface interactive-press"
        type="submit"
      >
        Generate
      </button>
    </form>
  </header>
  <section
    class="kundali-page__top-grid"
  >
    <article
      class="glass-card kundali-card interactive-surface motion-stagger"
    >
      <h3>
        Lagna
      </h3>
      <p
        class="value"
      >
        Pisces
      </p>
      <p>
        Meena
         · House 1
      </p>
      <p
        class="meta"
      >
        12.2
        °
      </p>
    </article>
    <article
      class="glass-card kundali-card interactive-surface motion-stagger"
    >
      <h3>
        Analysis Summary
      </h3>
      <p>
        <strong>
          Aspects:
        </strong>
         
        1
      </p>
      <p>
        <strong>
          Yogas:
        </strong>
         
        1
      </p>
      <p>
        <strong>
          Doshas:
        </strong>
         
        1
      </p>
      <p>
        <strong>
          Major Dashas:
        </strong>
         
        9
      </p>
    </article>
    <article
      class="glass-card kundali-card interactive-surface motion-stagger"
    >
      <h3>
        Trace + Confidence
      </h3>
      <p>
        <strong>
          Trace:
        </strong>
         
        tr_kundali_visual
      </p>
      <p>
        <strong>
          Confidence:
        </strong>
         
        computed
      </p>
      <p>
        <strong>
          Method:
        </strong>
         
        kundali_v2_aspects_dasha
      </p>
      <p>
        <strong>
          Quality:
        </strong>
         
        validated
      </p>
      <p>
        <strong>
          Scope:
        </strong>
         
        astrology_assist
      </p>
    </article>
  </section>
  <section
    class="glass-card kundali-table-card motion-stagger"
  >
    <h3>
      Graha Positions + Dignity
    </h3>
    <table
      class="kundali-table"
    >
      <thead>
        <tr>
          <th>
            Graha
          </th>
          <th>
            Rashi
          </th>
          <th>
            Longitude
          </th>
          <th>
            Dignity
          </th>
          <th>
            Retrograde
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Mangala
             (
            Mars
            )
          </td>
          <td>
            Cancer
          </td>
          <td>
            102.4
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Surya
             (
            Sun
            )
          </td>
          <td>
            Aquarius
          </td>
          <td>
            332.1
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Chandra
             (
            Moon
            )
          </td>
          <td>
            Capricorn
          </td>
          <td>
            289.3
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Budha
             (
            Mercury
            )
          </td>
          <td>
            Aquarius
          </td>
          <td>
            325
            °
          </td>
          <td>
            own (strong)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Guru
             (
            Jupiter
            )
          </td>
          <td>
            Taurus
          </td>
          <td>
            45.8
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Shukra
             (
            Venus
            )
          </td>
          <td>
            Pisces
          </td>
          <td>
            356.2
            °
          </td>
          <td>
            exalted (strong)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Shani
             (
            Saturn
            )
          </td>
          <td>
            Pisces
          </td>
          <td>
            1.6
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rahu
             (
            Rahu
            )
          </td>
          <td>
            Pisces
          </td>
          <td>
            18.1
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Ketu
             (
            Ketu
            )
          </td>
          <td>
            Virgo
          </td>
          <td>
            198.1
            °
          </td>
          <td>
            neutral (moderate)
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </section>
  <section
    class="kundali-page__analysis-grid"
  >
    <article
      class="glass-card kundali-aspects interactive-surface motion-stagger"
    >
      <h3>
        Key Aspects (Drishti)
      </h3>
      <ul>
        <li>
          <strong>
            ketu
          </strong>
           → 
          <strong>
            rahu
          </strong>
          <span>
            180
            ° · orb 
            0
            ° · strength 
            1
          </span>
        </li>
      </ul>
    </article>
    <article
      class="glass-card kundali-signals interactive-surface motion-stagger"
    >
      <h3>
        Yogas + Doshas
      </h3>
      <div
        class="signal-block"
      >
        <h4>
          Yogas
        </h4>
        <ul>
          <li>
            <strong>
              gaja_kesari
            </strong>
            : 
            Moon and Jupiter in kendra relation.
          </li>
        </ul>
      </div>
      <div
        class="signal-block"
      >
        <h4>
          Doshas
        </h4>
        <ul>
          <li>
            <strong>
              manglik
            </strong>
            : 
            Mars influences marriage-sensitive houses.
          </li>
        </ul>
      </div>
    </article>
  </section>
  <section
    class="kundali-page__bottom-grid"
  >
    <article
      class="glass-card kundali-houses interactive-surface motion-stagger"
    >
      <h3>
        12 Houses (Whole Sign)
      </h3>
      <div
        class="houses-grid"
      >
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            1
          </p>
          <p>
            House 1
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            2
          </p>
          <p>
            House 2
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            3
          </p>
          <p>
            House 3
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            4
          </p>
          <p>
            House 4
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            5
          </p>
          <p>
            House 5
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            6
          </p>
          <p>
            House 6
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            7
          </p>
          <p>
            House 7
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            8
          </p>
          <p>
            House 8
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            9
          </p>
          <p>
            House 9
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            10
          </p>
          <p>
            House 10
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            11
          </p>
          <p>
            House 11
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
        <div
          class="house-cell"
        >
          <p
            class="house-num"
          >
            House 
            12
          </p>
          <p>
            House 12
          </p>
          <p
            class="house-occupants"
          >
            —
          </p>
        </div>
      </div>
    </article>
    <article
      class="glass-card kundali-dasha interactive-surface motion-stagger"
    >
      <h3>
        Maha + Antar Dasha
      </h3>
      <ul>
        <li>
          <p>
            <strong>
              venus
            </strong>
             · 
            2026-02-15
             → 
            2046-02-15
             (
            20
            y)
          </p>
          <p
            class="meta"
          >
            Antar: 
            venus, sun, moon
          </p>
        </li>
      </ul>
    </article>
  </section>
  <section
    class="glass-card kundali-consistency interactive-surface motion-stagger"
  >
    <h3>
      Consistency Checks
    </h3>
    <ul>
      <li>
        <strong>
          graha_count
        </strong>
        : 
        pass
         · 
        All 9 grahas present.
      </li>
    </ul>
  </section>
</section>
`;

exports[`visual regression harness > muhurta page visual baseline 1`] = `
<section
  class="muhurta-page"
>
  <header
    class="glass-card muhurta-page__header"
  >
    <div>
      <h2
        class="text-display"
      >
        Muhurta Finder
      </h2>
      <p>
        Day-night muhurtas with hora, chaughadia, and optional tara-bala scoring.
      </p>
    </div>
    <form
      class="muhurta-page__controls"
    >
      <label>
        <span>
          Date
        </span>
        <input
          required=""
          type="date"
          value="2026-02-18"
        />
      </label>
      <label>
        <span>
          Ceremony
        </span>
        <select>
          <option
            value="general"
          >
            General
          </option>
          <option
            value="vivah"
          >
            Vivah
          </option>
          <option
            value="griha_pravesh"
          >
            Griha Pravesh
          </option>
          <option
            value="travel"
          >
            Travel
          </option>
          <option
            value="upanayana"
          >
            Upanayana
          </option>
        </select>
      </label>
      <label>
        <span>
          Assumption Set
        </span>
        <select>
          <option
            value="np-mainstream-v2"
          >
            NP Mainstream
          </option>
          <option
            value="diaspora-practical-v2"
          >
            Diaspora Practical
          </option>
        </select>
      </label>
      <label>
        <span>
          Birth Nakshatra (optional)
        </span>
        <input
          placeholder="1-27 or name"
          value=""
        />
      </label>
      <label>
        <span>
          Lat
        </span>
        <input
          value="27.7172"
        />
      </label>
      <label>
        <span>
          Lon
        </span>
        <input
          value="85.3240"
        />
      </label>
      <label>
        <span>
          Timezone
        </span>
        <input
          value="Asia/Kathmandu"
        />
      </label>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Find Windows
      </button>
    </form>
  </header>
  <section
    class="muhurta-page__hero-grid"
  >
    <article
      class="glass-card muhurta-highlight"
    >
      <h3>
        Best Window
      </h3>
      <p
        class="value"
      >
        Abhijit Muhurta
      </p>
      <p>
        11:48
         to 
        12:36
      </p>
      <p
        class="meta"
      >
        Score: 
        88
      </p>
      <p
        class="meta"
      >
        Profile: 
        muhurta_v2_hora_chaughadia_tarabala
      </p>
    </article>
    <article
      class="glass-card muhurta-highlight"
    >
      <h3>
        Rahu Kalam
      </h3>
      <p
        class="value"
      >
        16:12
      </p>
      <p>
        17:00
      </p>
      <p
        class="meta"
      >
        Segment 
        8
         (
        Sunday
        )
      </p>
    </article>
    <article
      class="glass-card muhurta-highlight"
    >
      <h3>
        Tara-Bala
      </h3>
      <p
        class="value"
      >
        good
      </p>
      <p>
        Sampat
         (distance 
        2
        )
      </p>
      <p
        class="meta"
      >
        Assumption: 
        np-mainstream-v2
      </p>
    </article>
  </section>
  <section
    class="glass-card muhurta-table-card"
  >
    <h3>
      Auspicious Muhurtas
    </h3>
    <table
      class="muhurta-table"
    >
      <thead>
        <tr>
          <th>
            #
          </th>
          <th>
            Name
          </th>
          <th>
            Start
          </th>
          <th>
            End
          </th>
          <th>
            Score
          </th>
          <th>
            Hora
          </th>
          <th>
            Chaughadia
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            7
          </td>
          <td>
            Abhijit Muhurta
          </td>
          <td>
            11:48
          </td>
          <td>
            12:36
          </td>
          <td>
            88
          </td>
          <td>
            Jupiter
          </td>
          <td>
            Labh
          </td>
        </tr>
        <tr>
          <td>
            10
          </td>
          <td>
            Shubha Muhurta
          </td>
          <td>
            14:12
          </td>
          <td>
            15:00
          </td>
          <td>
            75
          </td>
          <td>
            Venus
          </td>
          <td>
            Amrit
          </td>
        </tr>
      </tbody>
    </table>
  </section>
  <section
    class="glass-card muhurta-table-card"
  >
    <h3>
      Day/Night Snapshot
    </h3>
    <p>
      Daylight: 
      720
       min · Night: 
      720
       min · Day Muhurtas: 
      15
       · Night Muhurtas: 
      15
    </p>
    <p>
      Day Hora: 
      Sun
       starts · First Chaughadia: 
      Labh
    </p>
  </section>
</section>
`;

exports[`visual regression harness > panchanga page visual baseline 1`] = `
<section
  class="panchanga-page"
>
  <header
    class="glass-card panchanga-header"
  >
    <div>
      <h2
        class="text-display"
      >
        Panchanga Viewer
      </h2>
      <p>
        Daily tithi, nakshatra, yoga, karana, and vaara from the astronomical engine.
      </p>
    </div>
    <label
      class="panchanga-date-input"
      for="panchanga-date"
    >
      <span>
        Date
      </span>
      <input
        id="panchanga-date"
        type="date"
        value="2026-02-18"
      />
    </label>
  </header>
  <section
    class="panchanga-grid"
  >
    <article
      class="glass-card panchanga-card"
    >
      <h3>
        Tithi
      </h3>
      <p
        class="value"
      >
        Chaturdashi
      </p>
      <p
        class="meta"
      >
        #
        14
         · 
        krishna
      </p>
    </article>
    <article
      class="glass-card panchanga-card"
    >
      <h3>
        Nakshatra
      </h3>
      <p
        class="value"
      >
        Shravana
      </p>
      <p
        class="meta"
      >
        Pada 
        1
      </p>
    </article>
    <article
      class="glass-card panchanga-card"
    >
      <h3>
        Yoga
      </h3>
      <p
        class="value"
      >
        Shubha
      </p>
      <p
        class="meta"
      >
        #
        9
      </p>
    </article>
    <article
      class="glass-card panchanga-card"
    >
      <h3>
        Karana
      </h3>
      <p
        class="value"
      >
        Vishti
      </p>
      <p
        class="meta"
      >
        #
        7
      </p>
    </article>
    <article
      class="glass-card panchanga-card"
    >
      <h3>
        Vaara
      </h3>
      <p
        class="value"
      >
        Sunday
      </p>
      <p
        class="meta"
      >
        Ravivara
      </p>
    </article>
  </section>
  <section
    class="glass-card panchanga-metadata"
  >
    <h3>
      Engine Metadata
    </h3>
    <div
      class="metadata-grid"
    >
      <p>
        <strong>
          Gregorian
        </strong>
         
        2026-02-15
      </p>
      <p>
        <strong>
          BS
        </strong>
         
        2082
         
        Falgun
         
        3
      </p>
      <p>
        <strong>
          Panchanga Confidence
        </strong>
         
        astronomical
      </p>
      <p>
        <strong>
          Tithi Method
        </strong>
         
        ephemeris_udaya
      </p>
      <p>
        <strong>
          Sunrise Used
        </strong>
         
        2026-02-15T06:43:00+05:45
      </p>
      <p>
        <strong>
          Ephemeris Mode
        </strong>
         
        swiss_moshier
      </p>
    </div>
  </section>
  <section
    class="glass-card authority-inspector"
    data-testid="authority-inspector"
  >
    <header
      class="authority-inspector__header"
    >
      <div>
        <h3>
          Panchanga Response Authority
        </h3>
        <p>
          Provenance, confidence, and trace metadata for this response.
        </p>
      </div>
      <div
        class="authority-inspector__badges"
      >
        <span
          class="badge badge-primary"
        >
          computed
        </span>
        <span
          class="badge"
        >
          ephemeris_udaya
        </span>
      </div>
    </header>
    <div
      class="authority-inspector__grid"
    >
      <p>
        <strong>
          Confidence Score
        </strong>
         
        0.92
      </p>
      <p>
        <strong>
          Boundary Risk
        </strong>
         
        low
      </p>
      <p>
        <strong>
          Snapshot
        </strong>
         
        <code>
          snap_visual
        </code>
      </p>
      <p>
        <strong>
          Dataset Hash
        </strong>
         
        <code>
          sha256:abc
        </code>
      </p>
      <p>
        <strong>
          Rules Hash
        </strong>
         
        <code>
          sha256:def
        </code>
      </p>
      <p>
        <strong>
          Signature
        </strong>
         
        <code>
          —
        </code>
      </p>
      <p>
        <strong>
          Verify URL
        </strong>
         
        <code>
          /verify/tr_visual_001
        </code>
      </p>
      <p>
        <strong>
          Policy
        </strong>
         
        np-mainstream
         · 
        NP
      </p>
    </div>
    <div
      class="authority-inspector__trace"
    >
      <p>
        <strong>
          Trace ID
        </strong>
         
        <code>
          tr_visual_001
        </code>
      </p>
      <button
        class="btn btn-secondary"
      >
        Open Trace
      </button>
    </div>
  </section>
</section>
`;

exports[`visual regression harness > personal page visual baseline 1`] = `
<section
  class="personal-page"
>
  <header
    class="glass-card personal-page__header"
  >
    <div>
      <h2
        class="text-display"
      >
        Personal Panchanga
      </h2>
      <p>
        Location-aware daily panchanga with traceable metadata.
      </p>
    </div>
    <form
      class="personal-page__controls"
    >
      <label>
        <span>
          Date
        </span>
        <input
          required=""
          type="date"
          value="2026-02-18"
        />
      </label>
      <label>
        <span>
          Lat
        </span>
        <input
          placeholder="27.7172"
          value="27.7172"
        />
      </label>
      <label>
        <span>
          Lon
        </span>
        <input
          placeholder="85.3240"
          value="85.3240"
        />
      </label>
      <label>
        <span>
          Timezone
        </span>
        <input
          placeholder="Asia/Kathmandu"
          value="Asia/Kathmandu"
        />
      </label>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Refresh
      </button>
    </form>
  </header>
  <section
    class="personal-page__grid"
  >
    <article
      class="glass-card personal-card"
    >
      <h3>
        Tithi
      </h3>
      <p
        class="value"
      >
        Chaturdashi
      </p>
      <p
        class="meta"
      >
        #
        14
         · 
        krishna
      </p>
    </article>
    <article
      class="glass-card personal-card"
    >
      <h3>
        Nakshatra
      </h3>
      <p
        class="value"
      >
        Shravana
      </p>
      <p
        class="meta"
      >
        #
        22
      </p>
    </article>
    <article
      class="glass-card personal-card"
    >
      <h3>
        Yoga
      </h3>
      <p
        class="value"
      >
        Shubha
      </p>
      <p
        class="meta"
      >
        #
        9
      </p>
    </article>
    <article
      class="glass-card personal-card"
    >
      <h3>
        Karana
      </h3>
      <p
        class="value"
      >
        Vishti
      </p>
      <p
        class="meta"
      >
        #
        7
      </p>
    </article>
    <article
      class="glass-card personal-card"
    >
      <h3>
        Vaara
      </h3>
      <p
        class="value"
      >
        Sunday
      </p>
      <p
        class="meta"
      >
        Ravivara
      </p>
    </article>
  </section>
  <section
    class="glass-card personal-page__meta"
  >
    <h3>
      Computation Context
    </h3>
    <div
      class="personal-page__meta-grid"
    >
      <p>
        <strong>
          Date:
        </strong>
         
        2026-02-15
      </p>
      <p>
        <strong>
          BS:
        </strong>
         
        2082
         
        Falgun
         
        3
      </p>
      <p>
        <strong>
          Location:
        </strong>
         
        27.7172
        , 
        85.324
      </p>
      <p>
        <strong>
          Timezone:
        </strong>
         
        Asia/Kathmandu
      </p>
      <p>
        <strong>
          Confidence:
        </strong>
         
        computed
      </p>
      <p>
        <strong>
          Quality Band:
        </strong>
         
        gold
      </p>
      <p>
        <strong>
          Method Profile:
        </strong>
         
        personal_panchanga_v2_udaya
      </p>
      <p>
        <strong>
          Advisory Scope:
        </strong>
         
        ritual_planning
      </p>
      <p>
        <strong>
          Trace ID:
        </strong>
         
        tr_personal_visual
      </p>
    </div>
  </section>
</section>
`;
